--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,52 @@
+absl-py==1.1.0
+astunparse==1.6.3
+cachetools==5.2.0
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+click==8.1.3
 Flask==1.1.1
-numpy > 1.19.5
-Jinja2==2.11.2
-Pillow==8.3.2
-urllib3==1.25.9
+flatbuffers==1.12
+gast==0.4.0
+google-auth==2.7.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.46.3
 gunicorn==19.9.0
+h5py==3.7.0
+idna==3.3
+importlib-metadata==4.11.4
+itsdangerous==2.0.1
+Jinja2==2.11.2
 joblib==0.14.0
-tensorflow==2.9.0
+keras==2.9.0
+Keras-Preprocessing==1.1.2
+libclang==14.0.1
+Markdown==3.3.7
+MarkupSafe==2.0.1
+numpy==1.22.4
+oauthlib==3.2.0
+opencv-python-headless==4.6.0.66
+opt-einsum==3.3.0
+packaging==21.3
+Pillow==8.3.2
+protobuf==3.19.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.9
+requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
+six==1.16.0
+tensorboard==2.9.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.9.1
+tensorflow-estimator==2.9.0
+tensorflow-io-gcs-filesystem==0.26.0
+termcolor==1.1.0
+tflite==2.4.0
+typing-extensions==4.2.0
+urllib3==1.25.9
+Werkzeug==2.0.0
+wrapt==1.14.1
+zipp==3.8.0
